--- a/sources/.github/workflows/cancel-previous-workflows.yaml
+++ b/sources/.github/workflows/cancel-previous-workflows.yaml
@@ -5,10 +5,10 @@ on:
 
 jobs:
   cancel-previous-workflows:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.12.0
+        uses: styfle/cancel-workflow-action@0.12.1
         with:
           workflow_id: all
           all_but_latest: true
