--- a/sources/.github/workflows/spell-check-daily.yaml
+++ b/sources/.github/workflows/spell-check-daily.yaml
@@ -1,10 +1,12 @@
-name: spell-check-differential
+name: spell-check-daily
 
 on:
-  pull_request:
+  schedule:
+    - cron: 0 0 * * *
+  workflow_dispatch:
 
 jobs:
-  spell-check-differential:
+  spell-check-daily:
     runs-on: ubuntu-22.04
     steps:
       - name: Check out repository
@@ -13,7 +15,9 @@ jobs:
       - name: Run spell-check
         uses: autowarefoundation/autoware-github-actions/spell-check@v1
         with:
-          cspell-json-url: https://raw.githubusercontent.com/autowarefoundation/autoware-spell-check-dict/main/.cspell.json
+          local-cspell-json: .cspell.json
+          incremental-files-only: false
+          cspell-json-url: https://raw.githubusercontent.com/tier4/autoware-spell-check-dict/main/.cspell.json
           dict-packages: |
             https://github.com/autowarefoundation/autoware-spell-check-dict
             https://github.com/tier4/cspell-dicts
