--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -71,6 +71,7 @@ repos:
     rev: 7.0.0
     hooks:
       - id: isort
+        args: [--profile=black, --line-length=100]
 
   - repo: https://github.com/psf/black
     rev: 25.11.0
