feat(mkdocs.yaml): add tasklist and details extensions
Signed-off-by: Mete Fatih Cırıt <mfc@autoware.org>

--- a/sources/mkdocs.yaml
+++ b/sources/mkdocs.yaml
@@ -85,10 +85,13 @@ markdown_extensions:
       format: svg
   - pymdownx.arithmatex:
       generic: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.details
   - pymdownx.highlight
   - pymdownx.snippets:
       auto_append:
