feat: use native concurrency, and deprecate cancel-previous-workflows
Signed-off-by: Taeseung Sohn <taeseung.sohn@tier4.jp>

--- a/sources/.github/workflows/check-build-depends.yaml
+++ b/sources/.github/workflows/check-build-depends.yaml
@@ -9,6 +9,10 @@ on:
     paths:
       - build_depends*.repos
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   check-build-depends:
     runs-on: ubuntu-22.04
