--- a/sources/.github/workflows/pr-agent.yaml
+++ b/sources/.github/workflows/pr-agent.yaml
@@ -9,6 +9,10 @@ on:
     types: [opened, reopened]
   issue_comment:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   pr_agent_job:
     runs-on: ubuntu-22.04
