ci: add pre-commit-autoupdate as workflow in this repository, and add deprecation notification for sync source
Signed-off-by: Taeseung Sohn <taeseung.sohn@tier4.jp>

--- a/.github/workflows/pre-commit-optional-autoupdate.yaml
+++ b/.github/workflows/pre-commit-optional-autoupdate.yaml
@@ -2,21 +2,15 @@
 # https://github.com/autowarefoundation/sync-file-templates
 # To make changes, update the source repository and follow the guidelines in its README.
 
-# Deprecated: Consider removing this workflow if your `.pre-commit-config.yaml` is synced.
-
-name: pre-commit-autoupdate
+name: pre-commit-optional-autoupdate
 
 on:
   schedule:
     - cron: 0 0 1 1,4,7,10 * # quarterly
   workflow_dispatch:
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
-  pre-commit-autoupdate:
+  pre-commit-optional-autoupdate:
     runs-on: ubuntu-22.04
     steps:
       - name: Generate token
@@ -30,11 +24,11 @@ jobs:
         uses: autowarefoundation/autoware-github-actions/pre-commit-autoupdate@v1
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          pre-commit-config: .pre-commit-config.yaml
+          pre-commit-config: sources/.pre-commit-config-optional.yaml
           pr-labels: |
             tag:bot
             tag:pre-commit-autoupdate
-          pr-branch: pre-commit-autoupdate
-          pr-title: "ci(pre-commit): autoupdate"
-          pr-commit-message: "ci(pre-commit): autoupdate"
+          pr-branch: pre-commit-optional-autoupdate
+          pr-title: "ci(pre-commit-optional): autoupdate"
+          pr-commit-message: "ci(pre-commit-optional): autoupdate"
           auto-merge-method: squash
