--- a/.github/workflows/pre-commit-autoupdate.yaml
+++ b/.github/workflows/pre-commit-autoupdate.yaml
@@ -2,18 +2,12 @@
 # https://github.com/autowarefoundation/sync-file-templates
 # To make changes, update the source repository and follow the guidelines in its README.
 
-# Deprecated: Consider removing this workflow if your `.pre-commit-config.yaml` is synced.
-
 name: pre-commit-autoupdate
 
 on:
   schedule:
     - cron: 0 0 1 1,4,7,10 * # quarterly
   workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   pre-commit-autoupdate:
@@ -30,7 +24,7 @@ jobs:
         uses: autowarefoundation/autoware-github-actions/pre-commit-autoupdate@v1
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          pre-commit-config: .pre-commit-config.yaml
+          pre-commit-config: sources/.pre-commit-config.yaml
           pr-labels: |
             tag:bot
             tag:pre-commit-autoupdate
