ci: add pre-commit-autoupdate as workflow in this repository, and add deprecation notification for sync source (#57)
* ci: add pre-commit-autoupdate as workflow in this repository, and add deprecation notification for sync source

Signed-off-by: Taeseung Sohn <taeseung.sohn@tier4.jp>

* disable quaterly update outside of github workflow

Signed-off-by: Taeseung Sohn <taeseung.sohn@tier4.jp>

* make .pre-commit-config.yaml as symlink

Signed-off-by: Taeseung Sohn <taeseung.sohn@tier4.jp>

* remove comment headers

Signed-off-by: Taeseung Sohn <taeseung.sohn@tier4.jp>

---------

Signed-off-by: Taeseung Sohn <taeseung.sohn@tier4.jp>

--- a/.github/workflows/pre-commit-optional-autoupdate.yaml
+++ b/.github/workflows/pre-commit-optional-autoupdate.yaml
@@ -1,19 +1,9 @@
-# This file is automatically synced from:
-# https://github.com/autowarefoundation/sync-file-templates
-# To make changes, update the source repository and follow the guidelines in its README.
-
-# Deprecated: Consider removing this workflow if your `.pre-commit-config-optional.yaml` is synced.
-
 name: pre-commit-optional-autoupdate
 
 on:
   schedule:
     - cron: 0 0 1 1,4,7,10 * # quarterly
   workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   pre-commit-optional-autoupdate:
@@ -30,7 +20,7 @@ jobs:
         uses: autowarefoundation/autoware-github-actions/pre-commit-autoupdate@v1
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          pre-commit-config: .pre-commit-config-optional.yaml
+          pre-commit-config: sources/.pre-commit-config-optional.yaml
           pr-labels: |
             tag:bot
             tag:pre-commit-autoupdate
