--- a/sources/.pre-commit-config.yaml
+++ b/sources/.pre-commit-config.yaml
@@ -73,7 +73,7 @@ repos:
       - id: isort
         args: [--profile=black, --line-length=100]
 
-  - repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 25.12.0
     hooks:
       - id: black
