--- a/.github/workflows/pre-commit-ansible-autoupdate.yaml
+++ b/.github/workflows/pre-commit-ansible-autoupdate.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: autowarefoundation/autoware-github-actions/pre-commit-autoupdate@v1
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          pre-commit-config: .pre-commit-config-ansible.yaml
+          pre-commit-config: sources/.pre-commit-config-ansible.yaml
           pr-labels: |
             tag:bot
             tag:pre-commit-autoupdate
