make pre-commit-ansible-autoupdate quaterly
Signed-off-by: Taeseung Sohn <taeseung.sohn@tier4.jp>

--- a/sources/.pre-commit-config-ansible.yaml
+++ b/sources/.pre-commit-config-ansible.yaml
@@ -2,6 +2,11 @@
 # https://github.com/autowarefoundation/sync-file-templates
 # To make changes, update the source repository and follow the guidelines in its README.
 
+ci:
+  autofix_commit_msg: "style(pre-commit-ansible): autofix"
+  autoupdate_schedule: quarterly
+  autoupdate_commit_msg: "ci(pre-commit-ansible): quarterly autoupdate"
+
 repos:
   - repo: https://github.com/ansible/ansible-lint.git
     rev: v25.8.2
