--- a/.github/workflows/pre-commit-ansible-autoupdate.yaml
+++ b/.github/workflows/pre-commit-ansible-autoupdate.yaml
@@ -2,7 +2,7 @@ name: pre-commit-ansible-autoupdate
 
 on:
   schedule:
-    - cron: 0 0 * * *
+    - cron: 0 0 1 1,4,7,10 * # quarterly
   workflow_dispatch:
 
 concurrency:
@@ -31,7 +31,7 @@ jobs:
         uses: autowarefoundation/autoware-github-actions/pre-commit-autoupdate@v1
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          pre-commit-config: .pre-commit-config-ansible.yaml
+          pre-commit-config: sources/.pre-commit-config-ansible.yaml
           pr-labels: |
             tag:bot
             tag:pre-commit-autoupdate
